# triangle

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  eng.cpp  eng.h  main.cpp  vertexes.txt
